# ghostswarm_ws

./: CMakeLists.txt  README copy.md  README.md
launch/: complete_system.launch.py  swarm_simulation.launch.py
rviz/: default.rviz
scripts/: coordinator.py
src/ghostswarm_robots/: package.xml
src/ghostswarm_robots/docs/: architecture.md
src/ghostswarm_robots/scripts/: uav_agent.py  ugv_agent.py
src/ghostswarm_robots/worlds/: adversarial_environment.world
